crates/utils/src/snapshots/utils__wasm_tools__tests__exports_imports@test_programs_fibo_workflow.wasm_exports.snap
---
source: crates/utils/src/wasm_tools.rs
expression: exports
---
{
  "testing:fibo-workflow/workflow-nesting.fibo-nested-workflow": [
    [
      [
        "n",
        "U8"
      ]
    ],
    "U64"
  ],
  "testing:fibo-workflow/workflow.fiboa": [
    [
      [
        "n",
        "U8"
      ],
      [
        "iterations",
        "U32"
      ]
    ],
    "U64"
  ],
  "testing:fibo-workflow/workflow.fiboa-concurrent": [
    [
      [
        "n",
        "U8"
      ],
      [
        "iterations",
        "U32"
      ]
    ],
    "U64"
  ],
  "testing:fibo-workflow/workflow.fibow": [
    [
      [
        "n",
        "U8"
      ],
      [
        "iterations",
        "U32"
      ]
    ],
    "U64"
  ]
}
